lots of improvements
- improve enable and reload logic
- improve colorizer
- rename main class
- switch from Collections.emptyList() to List.of()
-